Fixes the SliderDescription image spacing

--- a/src/components/DescriptionSlider.scss
+++ b/src/components/DescriptionSlider.scss
@@ -6,7 +6,7 @@
   .content {
     width: 300px;
     margin: 1rem auto;
-    height: 410px;
+    height: 380px;
     display: flex;
     flex-direction: column;
     justify-content: start;
